--- a/EmpInfo/Views/Home/BasicInfo.cshtml
+++ b/EmpInfo/Views/Home/BasicInfo.cshtml
@@ -97,7 +97,7 @@
                     <div class="col-sm-4 col-xs-12">
                         <div class="b-div">
                             <span class="b-label">工序:</span>
-                            <div class="b-input"><input type="text" class="form-control" name="line_name" value="@info.line_name" placeholder="具体工序名称" /></div>
+                            <div class="b-input"><input type="text" class="form-control" name="line_name" value="@info.line_name" placeholder="工序名称，没有可不填" /></div>
                         </div>
                     </div>
                     <div class="col-sm-4 col-xs-12">
@@ -109,7 +109,7 @@
                     <div class="col-sm-4 col-xs-12">
                         <div class="b-div">
                             <span class="b-label">邮箱地址:</span>
-                            <div class="b-input"><input type="text" class="form-control" name="email" value="@info.email" placeholder="信利邮箱地址，没有可不输入" /></div>
+                            <div class="b-input"><input type="text" class="form-control" name="email" value="@info.email" placeholder="本人专用信利邮箱，没有或公共的不用输入" /></div>
                         </div>
                     </div>
                 </div>                
