--- a/EmpInfo/Views/Shared/_Layout.cshtml
+++ b/EmpInfo/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
     @RenderSection("CSS", false)
     <style type="text/css">
-        body, div, p, h1, h2, h3, h4, h5, h6, legend, input, button, a, label, span {
+        body, div, p, h1, h2, h3, h4, h5, h6, legend, input, button, a, label, span,pre {
             font-family: 'Microsoft YaHei','Courier New',Arial;
         }
         .container {
