--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -99,6 +99,12 @@
                     <p class="text-center" data-key="漏刷,多刷,刷卡">考勤补记</p>
                 </a>
             </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=KS")">
+                    <img src="@Url.Content("~/Content/images/ks.png")" alt="开源节流建议申请" class="center-block" />
+                    <p class="text-center">开源节流建议</p>
+                </a>
+            </div>
 
             <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 物流出货 & K3相关</div>
 
@@ -186,6 +192,13 @@
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=DE")">
                     <img src="@Url.Content("~/Content/images/de.png")" class="center-block" />
                     <p class="text-center">后勤工程支出</p>
+                </a>
+            </div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Others/DSIndex")">
+                    <img src="@Url.Content("~/Content/images/bus_deps.png")" class="center-block" />
+                    <p class="text-center">厂房简介维护</p>
                 </a>
             </div>
 
